RESOLVED FIXED96707
DFG: Dead GetButterfly's shouldn't be subject to CSE
https://bugs.webkit.org/show_bug.cgi?id=96707
Summary DFG: Dead GetButterfly's shouldn't be subject to CSE
Filip Pizlo
Reported 2012-09-13 16:54:32 PDT
Doing so is both pointless (it extends the live range of an operation without eliminating redundancy) and incorrect (it scrazzles the ref counts). Patch forthcoming. <rdar://problem/12296311>
Attachments
the patch (2.69 KB, patch)
2012-09-13 16:57 PDT, Filip Pizlo
no flags
the patch (9.20 KB, patch)
2012-09-13 17:08 PDT, Filip Pizlo
oliver: review+
Filip Pizlo
Comment 1 2012-09-13 16:57:29 PDT
Created attachment 164002 [details] the patch Still polishing it but this should do the trick.
Filip Pizlo
Comment 2 2012-09-13 17:08:22 PDT
Created attachment 164003 [details] the patch
Filip Pizlo
Comment 3 2012-09-13 18:44:20 PDT
Note You need to log in before you can comment on or make changes to this bug.