DFG: Dead GetButterfly's shouldn't be subject to CSE https://bugs.webkit.org/show_bug.cgi?id=96707 <rdar://problem/12296311>

Source/JavaScriptCore:

Reviewed by Oliver Hunt.

There were a number of cases of this that creeped into the CSE: it would
match something even though it was dead.

* dfg/DFGCSEPhase.cpp:
(JSC::DFG::CSEPhase::getPropertyStorageLoadElimination):
(JSC::DFG::CSEPhase::checkArrayElimination):
(JSC::DFG::CSEPhase::getIndexedPropertyStorageLoadElimination):
(JSC::DFG::CSEPhase::getScopeChainLoadElimination):
(JSC::DFG::CSEPhase::getLocalLoadElimination):

LayoutTests:

Reviewed by Oliver Hunt.

* fast/js/dfg-dead-redundant-get-array-length-expected.txt: Added.
* fast/js/dfg-dead-redundant-get-array-length.html: Added.
* fast/js/jsc-test-list:
* fast/js/script-tests/dfg-dead-redundant-get-array-length.js: Added.
(foo):



Canonical link: https://commits.webkit.org/114627@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@128541 268f45cc-cd09-0410-ab3c-d52691b4dbfc