Source/JavaScriptCore/dfg/DFGCSEPhase.cpp
@@ -582,6 +582,8 @@ private:
                 break;
 
             Node& node = m_graph[index];
+            if (!node.shouldGenerate())
+                continue;
             switch (node.op()) {
             case GetButterfly:
                 if (node.child1() == child1)
@@ -632,6 +634,8 @@ private:
                 break;
 
             Node& node = m_graph[index];
+            if (!node.shouldGenerate())
+                continue;
             switch (node.op()) {
             case PutByOffset:
             case PutStructure:
@@ -661,6 +665,8 @@ private:
                 break;
 
             Node& node = m_graph[index];
+            if (!node.shouldGenerate())
+                continue;
             switch (node.op()) {
             case GetIndexedPropertyStorage: {
                 if (node.child1() == child1 && node.arrayMode() == arrayMode)
@@ -688,6 +694,8 @@ private:
         for (unsigned i = endIndexForPureCSE(); i--;) {
             NodeIndex index = m_currentBlock->at(i);
             Node& node = m_graph[index];
+            if (!node.shouldGenerate())
+                continue;
             if (node.op() == GetScopeChain
                 && node.scopeChainDepth() == depth)
                 return index;
@@ -702,6 +710,8 @@ private:
         for (unsigned i = m_indexInBlock; i--;) {
             NodeIndex index = m_currentBlock->at(i);
             Node& node = m_graph[index];
+            if (!node.shouldGenerate())
+                continue;
             switch (node.op()) {
             case GetLocal:
                 if (node.local() == local) {
